--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,13 +2,34 @@ $icon-font-path: '../fonts/';
 
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "app/styles/color-schema.scss";
 // endbower
 
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+* {
+  outline: 0;
+}
+
+a {
+  color: $text-color;
+}
+
+@mixin btn {
+  font-size: 21px;
+  color: $btn-color;
+  border: 2px solid $btn-color;
+  background-color: transparent;
+  padding: 16px 32px 14px;
+  border-radius: 3px;
+  &:hover {
+    color: $btn-color;
+    border: 2px solid $btn-color;
+    background-color: $btn-highlight-color;
+  }
+  &:active {
+    color: $btn-color;
+    border: 2px solid $btn-color;
+    background-color: $btn-highlight-color;
+  }
 }
 
 /* Space out content a bit */
@@ -62,6 +83,23 @@ body {
 /* Supporting marketing content */
 .marketing {
   margin: 40px 0;
+  h3 {
+    font-size: 24px;
+    font-weight: normal;
+    text-align: center;
+    color: $section-title-color;
+  }
+  p.lead {
+    font-size: 14px;
+    text-align: center;
+    color: $section-lead-color;
+    margin-top: 8px;
+  }
+  .marketing-btn {
+    @include btn;
+    display: block;
+    margin: 0 auto;
+  }
   p + h4 {
     margin-top: 28px;
   }
