Fix container style

--- a/app/styles/color-schema.scss
+++ b/app/styles/color-schema.scss
@@ -3,3 +3,4 @@ $section-title-color: #33B5D3;
 $section-lead-color: #585858;
 $btn-color: #33B5D3;
 $btn-highlight-color: rgba(51, 181, 211, .4);
+$footer-background-color: #444444;
