--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -34,9 +34,14 @@ a {
 
 /* Space out content a bit */
 body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  // padding-top: 20px;
+  // padding-bottom: 20px;
 }
+
+.container-fluid {
+  padding: 0;
+}
+
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
@@ -64,10 +69,7 @@ body {
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
-}
-
-.container-narrow > hr {
-  margin: 30px 0;
+  background: $footer-background-color;
 }
 
 /* Main marketing message and sign up button */
