--- a/app/styles/color-schema.scss
+++ b/app/styles/color-schema.scss
@@ -1,6 +1,9 @@
+$theme-color: #33B5D3;
+
 $text-color: #121212;
 $section-title-color: #33B5D3;
 $section-lead-color: #585858;
 $btn-color: #33B5D3;
+$link-color: #33B5D3;
 $btn-highlight-color: rgba(51, 181, 211, .4);
 $footer-background-color: #444444;
