--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -60,13 +60,33 @@ body {
 /* Custom page header */
 .header {
   // border-bottom: 1px solid #e5e5e5;
-  padding: 12px 18px 12px;
+  height: 72px;
+  padding: 16px 32px 14px;
   /* Make the masthead heading the same height as the navigation */
   h3 {
     margin-top: 0;
     margin-bottom: 0;
     line-height: 40px;
     // padding-bottom: 19px;
+  }
+  .nav-pills {
+    li {
+      a {
+        padding: 10px 20px;
+      }
+      &.active {
+        a {
+          background-color: transparent;
+          color: $link-color;
+        }
+      }
+      &:hover {
+        a {
+          background-color: transparent;
+          color: $link-color;
+        }
+      }
+    }
   }
 }
 
@@ -88,11 +108,30 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center center;
-  background-image: url("/images/top-bg.jpg");
+  background-image: url("../images/top-bg.jpg");
   border-radius: 0;
+  overflow: hidden;
+  position: relative;
+  h1 {
+    color: #ffffff;
+    .glyphicon-menu-right {
+      color: $theme-color;
+    }
+  }
+  .lead {
+    color: #fff;
+  }
   .btn {
     font-size: 21px;
     padding: 14px 24px;
+  }
+  .cover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .2);
   }
 }
 
@@ -121,6 +160,10 @@ body {
     font-weight: normal;
     text-align: center;
     color: $section-title-color;
+    &:before {
+      content: '\e258';
+      font-family: 'Glyphicons Halflings';
+    }
   }
   p.lead {
     font-size: 14px;
@@ -148,8 +191,8 @@ body {
   .header,
   .marketing,
   .footer {
-    padding-left: 0;
-    padding-right: 0;
+    // padding-left: 0;
+    // padding-right: 0;
   }
 
   /* Space out the masthead */
