--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -114,12 +114,16 @@ body {
   position: relative;
   h1 {
     color: #ffffff;
+    font-size: 46px;
     .glyphicon-menu-right {
       color: $theme-color;
     }
   }
   .lead {
     color: #fff;
+    font-size: 16px;
+    width: 680px;
+    padding: 14px 0 0 4px;
   }
   .btn {
     font-size: 21px;
@@ -131,7 +135,13 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .2);
+    background-color: rgba(0, 0, 0, .4);
+  }
+  .jumbotron-inner {
+    max-width: 1280px;
+    text-align: left;
+    margin: 0 auto;
+    padding: 120px 0 0 120px;
   }
 }
 
