--- a/app/styles/color-schema.scss
+++ b/app/styles/color-schema.scss
@@ -1,6 +1,7 @@
 $theme-color: #33B5D3;
 
 $text-color: #121212;
+$sub-text-color: #555555;
 $section-title-color: #33B5D3;
 $section-lead-color: #585858;
 $btn-color: #33B5D3;
