--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -92,11 +92,12 @@ body {
 
 /* Custom page footer */
 .footer {
-  min-height: 300px;
-  padding-top: 19px;
+  min-height: 200px;
+  padding-top: 42px;
   color: #777;
   border-top: 1px solid #e5e5e5;
   background: $footer-background-color;
+  color: #fff;
 }
 
 /* Main marketing message and sign up button */
