--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -48,6 +48,9 @@ body {
   padding: 0;
 }
 
+.logo {
+  height: 24px;
+}
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
