--- a/app/styles/color-schema.scss
+++ b/app/styles/color-schema.scss
@@ -2,6 +2,8 @@ $theme-color: #33B5D3;
 
 $text-color: #121212;
 $sub-text-color: #555555;
+$description-color: #909090;
+
 $section-title-color: #33B5D3;
 $section-lead-color: #585858;
 $btn-color: #33B5D3;
