--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -230,6 +230,49 @@ body {
   .member {
     flex: 0 0 180px;
     margin: 0 40px;
+    p {
+      margin-bottom: 6px;
+      color: $description-color;
+    }
+    .name {
+      color: $text-color;
+      margin-top: 12px;
+      font-size: 14px;
+      font-weight: bold;
+    }
+    .member-avatar {
+      position: relative;
+      overflow: hidden;
+      height: 180px;
+      width: 180px;
+      img {
+        transform: scale(1.1);
+        transition: transform .2s ease-in-out;
+      }
+      .description-bg {
+        opacity: 0;
+        position: absolute;
+        background-color: rgba(0, 0, 0, .4);
+        height: 100%;
+        font-size: 12px;
+        top: 0;
+        transition: opacity .4s ease-in-out;
+        p {
+          color: #fff;
+          margin: 16px 22px;
+        }
+      }
+    }
+    &:hover {
+      .member-avatar {
+        img {
+          transform: scale(1);
+        }
+        .description-bg {
+          opacity: 1;
+        }
+      }
+    }
   }
 }
 
