--- a/app/styles/color-schema.scss
+++ b/app/styles/color-schema.scss
@@ -9,4 +9,6 @@ $section-lead-color: #585858;
 $btn-color: #33B5D3;
 $link-color: #33B5D3;
 $btn-highlight-color: rgba(51, 181, 211, .4);
+
+$gray-background-color: #F7F7F7;
 $footer-background-color: #444444;
