--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -46,6 +46,7 @@ body {
 
 .container-fluid {
   padding: 0;
+  overflow: hidden;
 }
 
 .logo {
@@ -209,6 +210,7 @@ body {
 
 .flow-section {
   display: flex;
+  flex-wrap: wrap;
   padding-bottom: 24px;
   background-image: linear-gradient(to bottom, #fff, #f3f3f3);
   .flow-image {
@@ -242,6 +244,7 @@ body {
 
 .member-section {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   .member {
     flex: 0 0 180px;
