--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -247,7 +247,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   .member {
-    flex: 0 0 180px;
+    flex: 0 0 320px;
     margin: 0 40px;
     p {
       margin-bottom: 6px;
@@ -255,18 +255,23 @@ body {
     }
     .name {
       color: $text-color;
-      margin-top: 12px;
+      margin: 18px auto 8px;
       font-size: 14px;
       font-weight: bold;
+      // width: 180px;
+      text-align: left;
+    }
+    .description {
     }
     .member-avatar {
       position: relative;
       overflow: hidden;
       height: 180px;
       width: 180px;
+      margin: 0 auto;
       img {
-        transform: scale(1.1);
-        transition: transform .2s ease-in-out;
+        // transform: scale(1.1);
+        // transition: transform .2s ease-in-out;
       }
       .description-bg {
         opacity: 0;
