Fix section layout

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -218,11 +218,11 @@ body {
     background-size: cover;
     background-position: center center;
     min-height: 340px;
-    margin: 24px 30px;
+    margin: 42px 36px 42px 0;
   }
   .flow-body {
-    flex: 2;
-    padding: 42px 32px;
+    flex: 2.5;
+    padding: 42px 64px;
     height: 300px;
     h4 {
       font-size: 20px;
@@ -231,13 +231,15 @@ body {
     }
     p {
       margin-top: 40px;
-      font-size: 14px;
+      font-size: 16px;
+      line-height: 24px;
       color: $sub-text-color;
     }
   }
   &.odd {
     .flow-image {
       order: 2;
+      margin: 42px 0 42px 36px;
     }
   }
 }
