--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -65,7 +65,7 @@ body {
 .header {
   // border-bottom: 1px solid #e5e5e5;
   height: 72px;
-  padding: 16px 32px 14px;
+  padding: 16px 18px 14px;
   /* Make the masthead heading the same height as the navigation */
   h3 {
     margin-top: 0;
@@ -89,6 +89,14 @@ body {
           background-color: transparent;
           color: $link-color;
         }
+      }
+      &.blue {
+        a {
+          color: $link-color;
+        }
+        border: 1px solid $link-color;
+        margin-left: 12px;
+        border-radius: 3px;
       }
     }
   }
@@ -327,11 +335,17 @@ body {
   .header {
     // margin-bottom: 30px;
     .nav {
-      display: none;
+      // display: none;
+      li {
+        display: none;
+        &.blue {
+          display: block;
+        }
+      }
     }
     h3 {
-      text-align: center;
-      margin-left: -20px;
+      // text-align: center;
+      // margin-left: -20px;
     }
   }
 
